[workspace]
resolver = "2"
members  = [
    # prod contracts
    "contracts/account-nft",
    "contracts/credit-manager",
    "contracts/swapper/*",
    "contracts/v2-zapper/*",
    "contracts/health",

    # mock contracts
    "contracts/mock-credit-manager",
    "contracts/mock-health",
    "contracts/mock-incentives",
    "contracts/mock-oracle",
    "contracts/mock-red-bank",
    "contracts/mock-vault",

    # packages
    "packages/health-computer",
    "packages/health-types",
    "packages/rover",
]

[workspace.package]
version       = "2.0.0"
authors       = [
  "Gabe R. <gabe.r@delphilabs.io>",
  "Larry Engineer <larry@delphidigital.io>",
  "Piotr B. <piotr@delphilabs.io>",
  "Brianna M. <brianna@delphilabs.io>"
]
license       = "GPL-3.0-or-later"
edition       = "2021"
repository    = "https://github.com/mars-protocol/rover"
homepage      = "https://marsprotocol.io"
documentation = "https://docs.marsprotocol.io/"
keywords      = ["mars", "cosmos", "cosmwasm"]

[workspace.dependencies]
anyhow             = "1.0.72"
cosmwasm-schema    = "1.3.0"
cosmwasm-std       = "1.3.0"
cw2                = "1.1.0"
cw721              = { git = "https://github.com/CosmWasm/cw-nfts/", branch = "main" }
cw721-base         = { git = "https://github.com/CosmWasm/cw-nfts/", branch = "main", features = ["library"] }
cw-dex             = { version = "0.3.1", features = ["osmosis"] }
cw-multi-test      = "0.16.5"
cw-paginate        = "0.2.1"
cw-utils           = "1.0.1"
cw-storage-plus    = "1.1.0"
cw-vault-standard  = { version = "0.3.1", features = ["lockup", "force-unlock"] }
itertools          = "0.11.0"
osmosis-std        = "0.16.1"
osmosis-test-tube  = "16.0.1"
proptest           = "1.2.0"
schemars           = "0.8.12"
serde              = { version = "1.0.175", default-features = false, features = ["derive"] }
serde_json         = "1.0.103"
serde-wasm-bindgen = "0.5.0"
test-case          = "3.1.0"
thiserror          = "1.0.44"
tsify              = "0.4.5"
wasm-bindgen       = "0.2.87"

# mars packages
mars-health                = { git = "https://github.com/mars-protocol/red-bank", rev = "6b5f55e" }
mars-liquidation           = { git = "https://github.com/mars-protocol/red-bank", rev = "6b5f55e" }
mars-osmosis               = { git = "https://github.com/mars-protocol/red-bank", rev = "6b5f55e" }
mars-owner                 = { version = "2.0.0", features = ["emergency-owner"] }
mars-red-bank-types        = { git = "https://github.com/mars-protocol/red-bank", rev = "6b5f55e" }
mars-rover-health-computer = { version = "2.0.0", path = "./packages/health-computer" }
mars-rover-health-types    = { version = "2.0.0", path = "./packages/health-types" }
mars-rover                 = { version = "2.0.0", path = "./packages/rover" }

# contracts
mars-address-provider = { git = "https://github.com/mars-protocol/red-bank", rev = "6b5f55e", features = ["library"] }
mars-account-nft      = { version = "2.0.0", path = "./contracts/account-nft", features = ["library"] }
mars-params           = { git = "https://github.com/mars-protocol/red-bank", rev = "6b5f55e", features = ["library"] }
mars-rover-health     = { version = "2.0.0", path = "./contracts/health", features = ["library"] }
mars-swapper-base     = { version = "2.0.0", path = "./contracts/swapper/base", features = ["library"] }
mars-v2-zapper-base   = { version = "2.0.0", path = "./contracts/v2-zapper/base", features = ["library"] }

# mocks
mars-mock-credit-manager = { version = "2.0.0", path = "./contracts/mock-credit-manager", features = ["library"] }
mars-mock-incentives     = { version = "2.0.0", path = "./contracts/mock-incentives", features = ["library"] }
mars-mock-oracle         = { version = "2.0.0", path = "./contracts/mock-oracle", features = ["library"] }
mars-mock-red-bank       = { version = "2.0.0", path = "./contracts/mock-red-bank", features = ["library"] }
mars-mock-vault          = { version = "2.0.0", path = "./contracts/mock-vault", features = ["library"] }
mars-mock-rover-health   = { version = "2.0.0", path = "./contracts/mock-health", features = ["library"] }
mars-swapper-mock        = { version = "2.0.0", path = "./contracts/swapper/mock", features = ["library"] }
mars-v2-zapper-mock      = { version = "2.0.0", path = "./contracts/v2-zapper/mock", features = ["library"] }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
