[workspace]
resolver = "2"
members  = [
  # prod contracts
  "contracts/address-provider",
  "contracts/account-nft",
  "contracts/credit-manager",
  "contracts/health",
  "contracts/incentives",
  "contracts/oracle/*",
  "contracts/params",
  "contracts/red-bank",
  "contracts/rewards-collector/*",
  "contracts/swapper/*",
  "contracts/v2-zapper/*",

  # mock contracts
  "contracts/mock-credit-manager",
  "contracts/mock-health",
  "contracts/mock-incentives",
  "contracts/mock-oracle",
  "contracts/mock-pyth",
  "contracts/mock-red-bank",
  "contracts/mock-vault",

  # packages
  "packages/chains/*",
  "packages/health",
  "packages/health-computer",
  "packages/interest-rate",
  "packages/liquidation",
  "packages/testing",
  "packages/types",
  "packages/utils",
  "integration-tests",
]

[workspace.package]
version       = "2.0.0"
authors       = [
  "Gabe R. <gabe.r@delphilabs.io>",
  "Larry Engineer <larry@delphidigital.io>",
  "Piotr B. <piotr@delphilabs.io>",
  "Spike Spiegel <spikeonmars@protonmail.com>",
  "Brianna M. <brianna@delphilabs.io>",
  "Ahmad Kaouk",
  "Harry Scholes",
]
edition       = "2021"
license       = "GPL-3.0-or-later"
repository    = "https://github.com/mars-protocol/red-bank"
homepage      = "https://marsprotocol.io"
documentation = "https://docs.marsprotocol.io/"
keywords      = ["mars", "cosmos", "cosmwasm"]

[workspace.dependencies]
anyhow             = "1.0.80"
astroport          = "2.8.0"
bech32             = "0.9.1"
cosmwasm-schema    = "1.5.3"
cosmwasm-std       = "1.5.3"
cw2                = "1.1.2"
cw721              = { git = "https://github.com/CosmWasm/cw-nfts/", branch = "main" }
cw721-base         = { git = "https://github.com/CosmWasm/cw-nfts/", branch = "main", features = ["library"] }
cw-dex             = { version = "0.3.1", features = ["osmosis"] }
cw-paginate        = "0.2.1"
cw-storage-plus    = "1.2.0"
cw-utils           = "1.0.3"
cw-vault-standard  = { version = "0.4.0", features = ["lockup", "force-unlock"] }
ica-oracle         = { git = "https://github.com/Stride-Labs/ica-oracle", rev = "2fdf76f", features = ["library"] }
itertools          = "0.12.1"
mars-owner         = { version = "2.0.0", features = ["emergency-owner"] }
neutron-sdk        = "0.8.0"
osmosis-std        = "0.22.0"
prost              = { version = "0.12.3", default-features = false }
pyth-sdk-cw        = "1.2.0"
schemars           = "0.8.16"
serde              = { version = "1.0.197", default-features = false }
serde_json         = "1.0.114"
serde-json-wasm    = "1.0.1"
serde-wasm-bindgen = "0.6.4"
strum              = "0.26.1"
thiserror          = "1.0.57"
tsify              = "0.4.5"
wasm-bindgen       = "0.2.91"

# dev-dependencies
cw-multi-test     = "0.20.0"
cw-it             = "0.3.0"
osmosis-test-tube = "22.1.0"
proptest          = "1.4.0"
test-case         = "3.3.1"

# packages
mars-health                = { path = "./packages/health" }
mars-rover-health-computer = { path = "./packages/health-computer" }
mars-interest-rate         = { path = "./packages/interest-rate" }
mars-liquidation           = { path = "./packages/liquidation" }
mars-osmosis               = { path = "./packages/chains/osmosis" }
# Old rover types used for migration (https://github.com/mars-protocol/v2-fields-of-mars/releases/tag/v1.0.0)
mars-rover-old             = { package = "mars-rover", git = "https://github.com/mars-protocol/v2-fields-of-mars", rev = "183e4c5" }
mars-testing               = { path = "./packages/testing" }
mars-types                 = { path = "./packages/types" }
mars-utils                 = { path = "./packages/utils" }

# contracts
mars-account-nft               = { path = "./contracts/account-nft" }
mars-address-provider          = { path = "./contracts/address-provider" }
mars-incentives                = { path = "./contracts/incentives" }
mars-mock-pyth                 = { path = "./contracts/mock-pyth" }
mars-oracle-base               = { path = "./contracts/oracle/base" }
mars-oracle-osmosis            = { path = "./contracts/oracle/osmosis" }
mars-oracle-wasm               = { path = "./contracts/oracle/wasm" }
mars-params                    = { path = "./contracts/params" }
mars-red-bank                  = { path = "./contracts/red-bank" }
mars-rewards-collector-base    = { path = "./contracts/rewards-collector/base" }
mars-rewards-collector-neutron = { path = "./contracts/rewards-collector/neutron" }
mars-rewards-collector-osmosis = { path = "./contracts/rewards-collector/osmosis" }
mars-rover-health              = { path = "./contracts/health" }
mars-swapper-astroport         = { path = "./contracts/swapper/astroport" }
mars-swapper-base              = { path = "./contracts/swapper/base" }
mars-swapper-osmosis           = { path = "./contracts/swapper/osmosis" }
mars-zapper-base               = { path = "./contracts/v2-zapper/base" }

# mocks
mars-mock-credit-manager = { path = "./contracts/mock-credit-manager" }
mars-mock-incentives     = { path = "./contracts/mock-incentives" }
mars-mock-oracle         = { path = "./contracts/mock-oracle" }
mars-mock-red-bank       = { path = "./contracts/mock-red-bank" }
mars-mock-vault          = { path = "./contracts/mock-vault" }
mars-mock-rover-health   = { path = "./contracts/mock-health" }
mars-swapper-mock        = { path = "./contracts/swapper/mock" }
mars-zapper-mock         = { path = "./contracts/v2-zapper/mock" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
