[package]
name          = "mars-integration-tests"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dev-dependencies]
anyhow                         = { workspace = true }
cosmwasm-std                   = { workspace = true }
cw-multi-test                  = { workspace = true }
mars-oracle-osmosis            = { workspace = true }
mars-oracle-base               = { workspace = true }
mars-osmosis                   = { workspace = true }
mars-red-bank                  = { workspace = true }
mars-rewards-collector-base    = { workspace = true }
mars-rewards-collector-osmosis = { workspace = true }
mars-testing                   = { workspace = true }
mars-types                     = { workspace = true }
mars-utils                     = { workspace = true }
osmosis-std                    = { workspace = true }
osmosis-testing                = { workspace = true }
serde                          = { workspace = true }
