[package]
name          = "mars-integration-tests"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dev-dependencies]
anyhow                         = { workspace = true }
astroport-v5                   = { workspace = true }
cosmwasm-std                   = { workspace = true }
cw-it                          = { workspace = true, features = ["osmosis-test-tube"] }
cw-multi-test                  = { workspace = true }
ica-oracle                     = { workspace = true }
mars-incentives                = { workspace = true }
mars-oracle-base               = { workspace = true }
mars-oracle-osmosis            = { workspace = true }
mars-osmosis                   = { workspace = true }
mars-params                    = { workspace = true }
mars-red-bank                  = { workspace = true }
mars-rewards-collector-osmosis = { workspace = true }
mars-swapper-osmosis           = { workspace = true }
mars-testing                   = { workspace = true }
mars-types                     = { workspace = true }
mars-utils                     = { workspace = true }
osmosis-std                    = { workspace = true }
osmosis-test-tube              = { workspace = true }
serde                          = { workspace = true }
