[package]
name = "account-nft"
version = "1.0.0"
authors = ["larry_0x <larry@delphidigital.io>, grod220 <gabe.r@delphilabs.io>"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/mars-protocol/rover"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-storage-plus = "0.16"
cw721 = "0.15"
cw721-base = { version = "0.15", features = ["library"] }
cosmwasm-schema = "1.1"
cosmwasm-std = "1.1"

[dev-dependencies]
anyhow = "1"
cw-multi-test = "0.16"
