[package]
name          = "account-nft"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw721           = { workspace = true }
cw721-base      = { workspace = true }
cw-storage-plus = { workspace = true }

[dev-dependencies]
anyhow        = { workspace = true }
cw-multi-test = { workspace = true }
