[package]
name          = "mars-address-provider"
description   = "Holds addresses of the contracts"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
bech32              = { workspace = true }
cosmwasm-std        = { workspace = true }
cw2                 = { workspace = true }
cw-storage-plus     = { workspace = true }
mars-owner          = { workspace = true }
mars-red-bank-types = { workspace = true }
thiserror           = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
serde           = { workspace = true }
