[package]
name          = "mars-address-provider"
description   = "A smart contract that holds addresses of Mars Red Bank contracts"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
bech32          = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw-storage-plus = { workspace = true }
mars-owner      = { workspace = true }
mars-types      = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
mars-testing    = { workspace = true }
serde           = { workspace = true }
