[package]
name          = "credit-manager"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
account-nft           = { workspace = true }
cosmos-vault-standard = { workspace = true }
cosmwasm-schema       = { workspace = true }
cosmwasm-std          = { workspace = true }
cw2                   = { workspace = true }
cw721                 = { workspace = true }
cw721-base            = { workspace = true }
cw-item-set           = { workspace = true }
cw-storage-plus       = { workspace = true }
mars-health           = { workspace = true }
mars-outpost          = { workspace = true }
mars-oracle-adapter   = { workspace = true }
rover                 = { workspace = true }

[dev-dependencies]
anyhow        = { workspace = true }
cw-multi-test = { workspace = true }
cw-utils      = { workspace = true }
itertools     = "0.10"
mock-oracle   = { workspace = true }
mock-red-bank = { workspace = true }
mock-vault    = { workspace = true }
mock-zapper    = { workspace = true }
swapper-mock  = { workspace = true }
