[package]
name          = "mars-credit-manager"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema           = { workspace = true }
cosmwasm-std              = { workspace = true }
cosmwasm-vault-standard   = { workspace = true }
cw2                       = { workspace = true }
cw721                     = { workspace = true }
cw721-base                = { workspace = true }
cw-controllers-admin-fork = { workspace = true }
cw-item-set               = { workspace = true }
cw-storage-plus           = { workspace = true }
mars-account-nft          = { workspace = true }
mars-health               = { workspace = true }
mars-outpost              = { workspace = true }
mars-oracle-adapter       = { workspace = true }
mars-rover                = { workspace = true }

[dev-dependencies]
anyhow             = { workspace = true }
cw-multi-test      = { workspace = true }
cw-utils           = { workspace = true }
itertools          = { workspace = true }
mars-mock-oracle   = { workspace = true }
mars-mock-red-bank = { workspace = true }
mars-mock-vault    = { workspace = true }
mars-mock-zapper   = { workspace = true }
mars-swapper-mock  = { workspace = true }
