[package]
name          = "mars-credit-manager"
version       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema         = { workspace = true }
cosmwasm-std            = { workspace = true }
cw2                     = { workspace = true }
cw721                   = { workspace = true }
cw721-base              = { workspace = true }
cw-paginate             = { workspace = true }
cw-storage-plus         = { workspace = true }
cw-utils                = { workspace = true }
cw-vault-standard       = { workspace = true }
mars-account-nft-types  = { workspace = true }
mars-liquidation        = { workspace = true }
mars-params             = { workspace = true }
mars-owner              = { workspace = true }
mars-red-bank-types     = { workspace = true }
mars-rover              = { workspace = true }
mars-rover-health-types = { workspace = true }

[dev-dependencies]
anyhow                = { workspace = true }
cw-multi-test         = { workspace = true }
itertools             = { workspace = true }
mars-account-nft      = { workspace = true }
mars-address-provider = { workspace = true }
mars-mock-incentives  = { workspace = true }
mars-mock-oracle      = { workspace = true }
mars-mock-red-bank    = { workspace = true }
mars-mock-vault       = { workspace = true }
mars-rover-health     = { workspace = true }
mars-swapper-mock     = { workspace = true }
mars-zapper-mock      = { workspace = true }
test-case             = { workspace = true }
