[package]
name = "example"
version = "0.1.0"
authors = ["grod220 <gabe.r@delphilabs.io>, larry_0x <larry@delphidigital.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
fields-credit-manager = { version = "0.1.0", path = "../../packages/fields-credit-manager" }

cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.2"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
