[package]
name          = "mars-incentives"
description   = "A smart contract that manages MARS incentives for depositors"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[profile.release]
overflow-checks  = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "mars-testing/backtraces", "mars-utils/backtraces", "mars-red-bank/backtraces"]

[dependencies]
cosmwasm-std        = { workspace = true }
cw2                 = { workspace = true }
cw-storage-plus     = { workspace = true }
mars-owner          = { workspace = true }
mars-red-bank-types = { workspace = true }
mars-utils          = { workspace = true }
thiserror           = { workspace = true }

[dev-dependencies]
cosmwasm-schema     = { workspace = true }
mars-testing        = { workspace = true }
osmosis-std         = { workspace = true }
mars-red-bank       = { workspace = true }
test-case           = { workspace = true }
