[package]
name          = "mars-incentives"
description   = "A smart contract that manages MARS incentives for depositors"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "mars-testing/backtraces", "mars-utils/backtraces", "mars-red-bank/backtraces"]

[dependencies]
cosmwasm-schema         = { workspace = true }
cosmwasm-std            = { workspace = true }
cw2                     = { workspace = true }
cw-storage-plus         = { workspace = true }
mars-owner              = { workspace = true }
mars-red-bank-types     = { workspace = true }
mars-utils              = { workspace = true }
thiserror               = { workspace = true }

# Old red-bank types used for migration.
# It comes from v1.0.0 tag with one commit enabling library feature
mars-incentives-old = { package = "mars-incentives", git = "https://github.com/mars-protocol/red-bank", rev = "29ee60b", features = ["library"] }
mars-red-bank-types-old = { package = "mars-red-bank-types", git = "https://github.com/mars-protocol/red-bank", rev = "29ee60b" }

[dev-dependencies]
mars-testing        = { workspace = true }
osmosis-std         = { workspace = true }
mars-red-bank       = { workspace = true }
test-case           = { workspace = true }
